TransformationMatrix::inverse should use multiplication instead of division

Microbenchmark: Execute 1 million matrix inversion in a for loop.

Result: (measured on Arndale Octa board - Cortex-A15)
|                            | before(ms)| after(ms) | Speedup |
| GCC 4.8.2                  | 7545      | 2575      | 2.93x   |
| Clang 4.0.0 (trunk 287685) | 8260      | 3555      | 2.32x   |

BUG=669838

Review-Url: https://codereview.chromium.org/2545473002
Cr-Commit-Position: refs/heads/master@{#436920}

Former-commit-id: 97e30b35dd6b89ee97f08cf467c80df5d3369fa5